# Stereo-Reconstruction-Group

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  match_points.cpp  match_points.h
images/: calib.txt
